Self-repl: Improve mobile appearance of eqn (1).

--- a/self_repl_fns/kindle_template.tex
+++ b/self_repl_fns/kindle_template.tex
@@ -209,6 +209,7 @@ $endif$
 % Begin custom, non-pandoc commands.
 
 \newcommand{\latexonlyrule}{\rule}
+\newenvironment{densearray}{\begin{array}{rcl}}{\end{array}}
 
 % End custom, non-pandoc commands.
 
