--- a/self_repl_fns/template.tex
+++ b/self_repl_fns/template.tex
@@ -207,6 +207,7 @@ $endif$
 % Begin custom, non-pandoc commands.
 
 \newcommand{\latexonlyrule}{\rule}
+\newenvironment{densearray}{\begin{array}{rcl}}{\end{array}}
 
 % End custom, non-pandoc commands.
 
