Self-repl: Improve mobile readability.

--- a/self_repl_fns/kindle_template.tex
+++ b/self_repl_fns/kindle_template.tex
@@ -210,6 +210,7 @@ $endif$
 
 \newcommand{\latexonlyrule}{\rule}
 \newenvironment{densearray}{\begin{array}{rcl}}{\end{array}}
+\newcommand{\class}{}
 
 % End custom, non-pandoc commands.
 
