--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -87,6 +87,7 @@
 
 \newcommand{\latexonlyrule}{\rule}
 \newenvironment{densearray}{\begin{array}{rcl}}{\end{array}}
+\newcommand{\class}{}
 
 % End custom, non-pandoc commands.
 
@@ -94,7 +95,7 @@
 \maketitle
 
 \newcommand{\R}{\mathbb{R}}
-\newcommand{\eqnset}[1]{\left.\mbox{$#1$}\;\;\right\rbrace}
+\newcommand{\eqnset}[1]{\left.\mbox{$#1$}\;\;\right\rbrace\class{postbrace}{ }}
 
 These are notes I'm creating for myself as I explore functions \(f\)
 that can be written as a sum \(f = g_1 + g_2\) where \(g_1\) and \(g_2\)
@@ -419,16 +420,16 @@ In this case, \(f(x) = f_L(x) = K_{0,1,2,3}\) and
 \(f_R(x) = K_{2,3,4,5} = f(x-2)\). We can satisfy all of the equations
 of (\ref{eq:exact_defn}) by using these functions:
 
-\begin{equation}\eqnset{\begin{array}{rcl}
+\begin{equation}\eqnset{\begin{densearray}
 t_1(x) & = &
 \begin{cases}
-  x              &   \text{if } x \le 1,       \\
-  3x - 2         &   \text{if } x \in (1,2),   \\
-  x + 2          &   \text{otherwise;}         \\
+  x              &   x \le 1,       \\
+  3x - 2         &   1 < x < 2,   \\
+  x + 2          &   x \ge 2; \\
 \end{cases}\\
 t_2(x) & = & x; \text{ and} \\
 s(x)   & = & x - 2. \\
-\end{array}}\label{eq:s_t1_t2}\end{equation}
+\end{densearray}}\label{eq:s_t1_t2}\end{equation}
 
 This is a simple yet foundational case --- it may be interesting to see
 which other functions are exactly self-replicating with these
