--- a/self_repl_fns/template.tex
+++ b/self_repl_fns/template.tex
@@ -208,6 +208,7 @@ $endif$
 
 \newcommand{\latexonlyrule}{\rule}
 \newenvironment{densearray}{\begin{array}{rcl}}{\end{array}}
+\newcommand{\class}{}
 
 % End custom, non-pandoc commands.
 
