Self-repl: break up a long display line (mobile).

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -608,9 +608,12 @@ Given \(x\in (1,2)\), there is some \(k\) with \(x\in G_k\) iff the
 base-3 expansion of \(x\) contains a 1 or if it ends with the tail
 \(\overline{0}\). This can be expressed as:
 
-\begin{equation}\text{For } x\in (1,2), \quad
-  x\not\in G \;\;\Leftrightarrow\;\; x \in 1.\zerotwo^\infty_3 -\,
-  \bigcup_{k\ge 0} 1.\zerotwo^k\overline{0}_3.\label{eq:onetwo_lessG}\end{equation}
+\begin{equation}\begin{array}{l}
+\text{For } x\in (1,2),\quad
+  x\not\in G \;\;\Leftrightarrow\;\; \\
+  x \in 1.\zerotwo^\infty_3 -\,
+  \bigcup_{k\ge 0} 1.\zerotwo^k\overline{0}_3.
+\end{array}\label{eq:onetwo_lessG}\end{equation}
 
 From here on, I'll more formally use the word \emph{expansion} --- based
 on the idea of the base-3 expansion of a number in \([0,1]\) --- to
