Self-repl: Hide word "postbrace" in pdf.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -87,7 +87,7 @@
 
 \newcommand{\latexonlyrule}{\rule}
 \newenvironment{densearray}{\begin{array}{rcl}}{\end{array}}
-\newcommand{\class}{}
+\newcommand{\class}[1]{}
 
 % End custom, non-pandoc commands.
 
