Self-repl: Add the optquad command.
This is a quad that shows up everywhere, but is much
smaller on mobile screens in html.

--- a/self_repl_fns/kindle_template.tex
+++ b/self_repl_fns/kindle_template.tex
@@ -211,6 +211,7 @@ $endif$
 \newcommand{\latexonlyrule}{\rule}
 \newenvironment{densearray}{\begin{array}{rcl}}{\end{array}}
 \newcommand{\class}[1]{}
+\newcommand{\optquad}{\quad}
 
 % End custom, non-pandoc commands.
 
