--- a/self_repl_fns/self_repl_fns_for_kindle.tex
+++ b/self_repl_fns/self_repl_fns_for_kindle.tex
@@ -88,6 +88,7 @@
 \newcommand{\latexonlyrule}{\rule}
 \newenvironment{densearray}{\begin{array}{rcl}}{\end{array}}
 \newcommand{\class}[1]{}
+\newcommand{\optquad}{\quad}
 
 % End custom, non-pandoc commands.
 
@@ -96,6 +97,7 @@
 
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\eqnset}[1]{\left.\mbox{$#1$}\;\;\right\rbrace\class{postbrace}{ }}
+\providecommand{\optquad}{\class{optquad}{}}
 
 These are notes I'm creating for myself as I explore functions \(f\)
 that can be written as a sum \(f = g_1 + g_2\) where \(g_1\) and \(g_2\)
@@ -632,7 +634,7 @@ expansion notation, we can write these last two equations as
 \(x' = x/3 + 4/3 = 0.1E_3 + 1.1_3 = 1.2E_3\). We can summarize this
 reasoning as
 
-\begin{equation}E\ne \overline 0, \overline 2 \quad\Rightarrow\quad
+\begin{equation}E\ne \overline 0, \overline 2 \optquad\Rightarrow\optquad
 f(1.\zerotwo E_3) = f(1.E_3).\label{eq:h_reln}\end{equation}
 
 \newcommand{\tail}{\text{tail}}
