--- a/self_repl_fns/self_repl_fns_for_kindle.tex
+++ b/self_repl_fns/self_repl_fns_for_kindle.tex
@@ -98,6 +98,7 @@
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\eqnset}[1]{\left.\mbox{$#1$}\;\;\right\rbrace\class{postbrace}{ }}
 \providecommand{\optquad}{\class{optquad}{}}
+\providecommand{\smallscrneg}{\class{smallscrneg}{ }}
 
 These are notes I'm creating for myself as I explore functions \(f\)
 that can be written as a sum \(f = g_1 + g_2\) where \(g_1\) and \(g_2\)
@@ -635,7 +636,7 @@ expansion notation, we can write these last two equations as
 reasoning as
 
 \begin{equation}E\ne \overline 0, \overline 2 \optquad\Rightarrow\optquad
-f(1.\zerotwo E_3) = f(1.E_3).\label{eq:h_reln}\end{equation}
+f(1.\zerotwo E_3) = f(1.E_3).\smallscrneg\label{eq:h_reln}\end{equation}
 
 \newcommand{\tail}{\text{tail}}
 
