--- a/self_repl_fns/template.tex
+++ b/self_repl_fns/template.tex
@@ -210,6 +210,7 @@ $endif$
 \newenvironment{densearray}{\begin{array}{rcl}}{\end{array}}
 \newcommand{\class}[1]{}
 \newcommand{\optquad}{\quad}
+\newcommand{\smallscrneg}{}
 
 % End custom, non-pandoc commands.
 
