Add \{big,small}scr commands (somewhat sadly).

--- a/self_repl_fns/kindle_template.tex
+++ b/self_repl_fns/kindle_template.tex
@@ -213,6 +213,9 @@ $endif$
 \newcommand{\class}[1]{}
 \newcommand{\Rule}[3]{}
 \newcommand{\optquad}{\quad}
+\newcommand{\smallscrneg}{}
+\newcommand{\smallscr}[1]{}
+\newcommand{\smallscrbreak}{}
 
 % End custom, non-pandoc commands.
 
