--- a/self_repl_fns/template.tex
+++ b/self_repl_fns/template.tex
@@ -212,6 +212,8 @@ $endif$
 \newcommand{\Rule}[3]{}
 \newcommand{\optquad}{\quad}
 \newcommand{\smallscrneg}{}
+\newcommand{\smallscr}[1]{}
+\newcommand{\bigscr}[1]{#1}
 
 % End custom, non-pandoc commands.
 
