--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -90,6 +90,9 @@
 \newcommand{\class}[1]{}
 \newcommand{\Rule}[3]{}
 \newcommand{\optquad}{\quad}
+\newcommand{\smallscrneg}{}
+\newcommand{\smallscr}[1]{}
+\newcommand{\smallscrbreak}{}
 
 % End custom, non-pandoc commands.
 
@@ -100,6 +103,8 @@
 \newcommand{\eqnset}[1]{\left.\mbox{$#1$}\;\;\right\rbrace\class{postbrace}{ }}
 \providecommand{\optquad}{\class{optquad}{}}
 \providecommand{\smallscrneg}{\class{smallscrneg}{ }}
+\providecommand{\bigscr}[1]{\class{bigscr}{#1}}
+\providecommand{\smallscr}[1]{\class{smallscr}{#1}}
 
 These are notes I'm creating for myself as I explore functions \(f\)
 that can be written as a sum \(f = g_1 + g_2\) where \(g_1\) and \(g_2\)
@@ -647,11 +652,12 @@ define the \emph{tail} of an expansion as a way to capture end-of-string
 behavior. More precisely, if \(E\) is an expansion, then define
 \(\tail(E)\) via
 
-\[\begin{array}{l}
-\tail(E) = \big\{\text{expansion }\eta \;\big|\;
+\[\bigscr{\tail(E) = \big\{\text{expansion }\eta \;\big|\;
+\exists\, j, k: 
+E(j + m) = \eta(k + m) \,\forall\, m \ge 0\big\}.}
+\smallscr{\begin{array}{l}\tail(E) = \big\{\text{expansion }\eta \;\big|\;
 \exists\, j, k: \\
-\quad E(j + m) = \eta(k + m) \,\forall\, m \ge 0\big\}.
-\end{array}\]
+\quad E(j + m) = \eta(k + m) \,\forall\, m \ge 0\big\}.\end{array}}\]
 
 Intuitively, \(\tail(E)\) is the set of all numbers in \([0, 1]\) with
 the same final sequence of base-3 digits as \(E\), ignoring any finite
