Self-repl: Improve (9) for mobile.

--- a/self_repl_fns/self_repl_fns.tex
+++ b/self_repl_fns/self_repl_fns.tex
@@ -92,7 +92,8 @@
 \newcommand{\optquad}{\quad}
 \newcommand{\smallscrneg}{}
 \newcommand{\smallscr}[1]{}
-\newcommand{\smallscrbreak}{}
+\newcommand{\bigscr}[1]{#1}
+\newcommand{\smallscrskip}[1]{}
 
 % End custom, non-pandoc commands.
 
@@ -105,6 +106,7 @@
 \providecommand{\smallscrneg}{\class{smallscrneg}{ }}
 \providecommand{\bigscr}[1]{\class{bigscr}{#1}}
 \providecommand{\smallscr}[1]{\class{smallscr}{#1}}
+\providecommand{\smallscrskip}[1]{\class{smallscrskip}{\hskip #1}}
 
 These are notes I'm creating for myself as I explore functions \(f\)
 that can be written as a sum \(f = g_1 + g_2\) where \(g_1\) and \(g_2\)
@@ -688,7 +690,17 @@ Let \(p_E\) be the length-\(j\) prefix of \(E\) and \(p_F\) be the
 length-\(k\) prefix of \(F\), and choose the expansions \(E'\) and
 \(F'\) so that
 
-\[x = 1.E_3 = 1.p_EE'_3 \quad\text{ and }\quad y = 1.F_3 = 1.p_FF'_3.\]
+\[
+\bigscr{
+x = 1.E_3 = 1.p_EE'_3 \quad\text{ and }\quad y = 1.F_3 = 1.p_FF'_3.
+}
+\smallscr{
+\begin{array}{rcl}
+x & = & 1.E_3 = 1.p_EE'_3 \quad\text{ and }\\
+y & = & 1.F_3 = 1.p_FF'_3.
+\end{array}
+}
+\]
 
 By (\ref{eq:thm2_pf}), \(E'=F'\). By repeated application of
 (\ref{eq:h_reln}), \(f(1.p_EE'_3) = f(1.E'_3)\) and
@@ -709,9 +721,9 @@ context of the functions \(s,\) \(t_1,\) and \(t_2\) as defined in
 (\ref{eq:rL_rR_g}). Then \(f\) is exactly self-replicating iff}
 
 \begin{equation}\eqnset{\begin{array}{lcll}
-f(1.\zerotwo E_3) & = & f(1.E_3) & \text{for } E\ne\overline 0,\overline 2; \\
-f(1.1E_3)         & = & g(0.E_3) & \text{for any }E. \latexonlyrule{0pt}{14pt} \\
-\end{array}}\label{eq:thm3}\end{equation}
+f(1.\zerotwo E_3) & \smallscrskip{-1em} = & \smallscrskip{-0.5em} f(1.E_3) & E\ne\overline 0,\overline 2;                \smallscrneg \\
+f(1.1E_3)         & \smallscrskip{-1em} = & \smallscrskip{-0.5em} g(0.E_3) & \text{for any }E. \latexonlyrule{0pt}{14pt} \smallscrneg \\
+\end{array} } \smallscrneg\label{eq:thm3}\end{equation}
 
 \textbf{Proof} \(\;\) The forward direction --- that (\ref{eq:thm3}) is
 a consequence of \(f\) being exactly self-replicating --- has already
