--- a/self_repl_fns/template.tex
+++ b/self_repl_fns/template.tex
@@ -214,6 +214,7 @@ $endif$
 \newcommand{\smallscrneg}{}
 \newcommand{\smallscr}[1]{}
 \newcommand{\bigscr}[1]{#1}
+\newcommand{\smallscrskip}[1]{}
 
 % End custom, non-pandoc commands.
 
