--- a/self_repl_fns/kindle_template.tex
+++ b/self_repl_fns/kindle_template.tex
@@ -215,7 +215,8 @@ $endif$
 \newcommand{\optquad}{\quad}
 \newcommand{\smallscrneg}{}
 \newcommand{\smallscr}[1]{}
-\newcommand{\smallscrbreak}{}
+\newcommand{\bigscr}[1]{#1}
+\newcommand{\smallscrskip}[1]{}
 
 % End custom, non-pandoc commands.
 
