--- a/self_repl_fns/self_repl_fns_for_kindle.tex
+++ b/self_repl_fns/self_repl_fns_for_kindle.tex
@@ -81,7 +81,7 @@
 
 \title{Self-Replicating Functions}
 \author{Tyler Neylon}
-\date{204.2016}
+\date{620.2017}
 
 % Begin custom, non-pandoc commands.
 
@@ -373,7 +373,9 @@ If any function can be written as \(K_{a,b,c,d}\) for some value of
 \(f\), I'll call it a \(K-\)\emph{function}. This form is general enough
 to include interval functions by using, for example, \(f(x)=0\). All
 previous ramp functions \(J(x)\) are also \(K-\)functions, as can be
-seen by setting \(f(x)=x\).
+seen by setting \(f(x)=x\). Note that a \(K-\)function \(K_{a,b,c,d}\)
+must have \(|b-a| = |d-c|\) in order to allow a shifted version to sum
+to 1 throughout the middle.
 
 The versatility of the \(K-\)functions shows that we can produce
 self-replicating functions that are highly discontinuous, such as by
@@ -464,6 +466,9 @@ parameters.
 \subsubsection{Characterizing one type of exactly self-replicating
 function}\label{characterizing-one-type-of-exactly-self-replicating-function}
 
+\emph{Note: The style of writing is about to get a tad more logically
+precise as some proofs start to show up.}
+
 In this section I'll give sufficient and necessary conditions for a
 function to be exactly self-replicating with the \(s\), \(t_1\), and
 \(t_2\) functions given in (\ref{eq:s_t1_t2}), and with \(f(x)=0\)
@@ -515,10 +520,12 @@ Notice that
 
 Since \(f_L(x) = f_S(t_1(x))\), and \(t_1\) maps
 \([1\tfrac{1}{3}, 1\tfrac{2}{3}]\) to \([2,3]\), this means
-\((\,f=f_L \restrict [1\tfrac{1}{3}, 1\tfrac{2}{3}]) = g\). Below, I'll
-show how repeated application of this kind of logic determines the
-non-ramp values of \(f\) almost everywhere; a boolean property
-\(P:\R\to\{\text{true},\text{false}\}\) is defined to be true
+\((\,f=f_L \restrict [1\tfrac{1}{3}, 1\tfrac{2}{3}]) = g\)
+(figure~\ref{fig:nonpl_process} below may help clarify the action of
+\(t_1\)). Below, I'll show how repeated application of this kind of
+logic determines the non-ramp values of \(f\) almost everywhere; a
+boolean property \(P:\R\to\{\text{true},\text{false}\}\) is defined to
+be true
 \href{https://en.wikipedia.org/wiki/Almost_everywhere}{\emph{almost
 everywhere}} when the set \(\{x : P(x) = \text{false}\}\) has measure
 zero.
@@ -652,10 +659,10 @@ Suppose that \(f(x) = y\) for some \(x\in (1,2)\). Let \(E\) be the
 expansion with \(x=1.E_3\); note that \(E\) cannot be the all-zero
 string \(\overline 0\) nor the all-two string \(\overline 2\) since
 \(x\in (1,2)\). Then \(f_S(x+\{0,2\}) = y\) and, by applying \(t_1\),
-\(f(x') = y\) for both \(x' = (x+2)/3\) and \(x' = (x+4)/3\). In
+\(f(x') = y\) for both \(x_1' = (x+2)/3\) and \(x_2' = (x+4)/3.\) In
 expansion notation, we can write these last two equations as
-\(x' = x/3 + 2/3 = 0.1E_3 + 0.2_3 = 1.0E_3\) and as
-\(x' = x/3 + 4/3 = 0.1E_3 + 1.1_3 = 1.2E_3\). We can summarize this
+\(x_1' = x/3 + 2/3 = 0.1E_3 + 0.2_3 = 1.0E_3\) and as
+\(x_2' = x/3 + 4/3 = 0.1E_3 + 1.1_3 = 1.2E_3\). We can summarize this
 reasoning as
 
 \begin{equation}E\ne \overline 0, \overline 2 \optquad\Rightarrow\optquad
@@ -669,10 +676,11 @@ define the \emph{tail} of an expansion as a way to capture end-of-string
 behavior. More precisely, if \(E\) is an expansion, then define
 \(\tail(E)\) via
 
-\[\bigscr{\tail(E) = \big\{\text{expansion }\eta \;\big|\;
+\[\bigscr{\tail(E) = \big\{y=0.F_3
+\;\big|\;
 \exists\, j, k: 
-E(j + m) = \eta(k + m) \,\forall\, m \ge 0\big\}.}
-\smallscr{\begin{array}{l}\tail(E) = \big\{\text{expansion }\eta \;\big|\;
+E(j + m) = F(k + m) \,\forall\, m \ge 0\big\}.}
+\smallscr{\begin{array}{l}\tail(E) = \big\{y=0.F_3 \;\big|\;
 \exists\, j, k: \\
 \quad E(j + m) = \eta(k + m) \,\forall\, m \ge 0\big\}.\end{array}}\]
 
@@ -809,9 +817,9 @@ and the value \(f(x) = r_L(0) + r_R(0)\) for all \(x\) not determined by
 \(r_L\) and \(r_R\).}\label{fig:nonplateau}
 \end{figure}
 
-Next I'll examine a famous function which is \emph{not} exactly
-self-replicating, but which can be seen as approximately
-self-replicating: the normal curve.
+There are many exciting directions to explore from here, but I'm going
+to take a break now, considering this as a nice initial step into the
+realm of self-replicating functions.
 
 \section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
