lsh1: image work checkpoint.

--- a/lsh_post1/lsh_post1_for_kindle.tex
+++ b/lsh_post1/lsh_post1_for_kindle.tex
@@ -34,6 +34,15 @@
             urlcolor=Blue,
             breaklinks=true}
 \urlstyle{same}  % don't use monospace font for urls
+\usepackage{graphicx,grffile}
+\makeatletter
+\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
+\def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
+\makeatother
+% Scale images if necessary, so that they will not overflow the page
+% margins by default, and it is still possible to overwrite the defaults
+% using explicit options in \includegraphics[width, height, ...]{}
+\setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
 \IfFileExists{parskip.sty}{%
 \usepackage{parskip}
 }{% else
@@ -91,6 +100,23 @@
 \begin{document}
 \maketitle
 
+CHECK:
+
+\begin{itemize}
+\tightlist
+\item
+  Search this file for all instances of CHECK, IMAGE, XXX
+\item
+  Check that the two pdf versions look good, including cross-references
+\item
+  Check that the references header has no number
+\item
+  Try to nicify the images in the pdf files
+\item
+  Ensure that all references to figures in the text are done by
+  mentioning a figure number.
+\end{itemize}
+
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\eqnset}[1]{\left.\mbox{$#1$}\;\;\right\rbrace\class{postbrace}{ }}
@@ -101,10 +127,10 @@
 \providecommand{\smallscrskip}[1]{\class{smallscrskip}{\hskip #1}}
 
 \emph{Locality-sensitive hashes} are techniques that dramatically speed
-up search or de-duplication operations on data. They can be used, for
-example, to filter out duplicates of scraped web pages at an impressive
-speed, or to perform near-constant-time lookups of nearby points from a
-geospatial data set.
+up search-for-neighbors or near-duplication detection on data. They can
+be used, for example, to filter out duplicates of scraped web pages at
+an impressive speed, or to perform near-constant-time lookups of nearby
+points from a geospatial data set.
 
 When you think about hash functions, you might think about \emph{hash
 tables}, which is perhaps the most common use case. As a reminder, the
@@ -127,10 +153,16 @@ ne'er-do-wells from easily building large lookup tables to be able to
 reverse a hash on more likely input values. Hash functions like these
 are called \emph{secure hash functions}. {[}CHECK{]}
 
-Here are what all these various hash functions have in common: * They
-map a wide variety of input data types to discrete values. * In
-practice, we care about whether or not two (or more) input values map to
-the same output (hashed) value.
+Here are what all these various hash functions have in common:
+
+\begin{itemize}
+\tightlist
+\item
+  They map a wide variety of input data types to discrete values.
+\item
+  In practice, we care about whether or not two (or more) input values
+  map to the same output (hashed) value.
+\end{itemize}
 
 Locality-sensitive hash (LSH) functions are specifically designed so
 that collisions of the hash value are \emph{more likely} given two input
@@ -212,17 +244,30 @@ notation, we can write our current hash setup as
 
 \[ a \sim b \iff h_1(a) = h_1(b). \]
 
-Here's an example of such a clustering:
+Figure~\ref{fig:fig1} shows an example of such a clustering.
 
-IMAGE
+\begin{figure}
+\centering
+\includegraphics{images/pdfs/lsh_image1_v2.pdf}
+\caption{Twenty points chosen randomly in a circle with radius 4. Each
+point \(x\) is colored based on its hash value
+\(h_1(x).\)}\label{fig:fig1}
+\end{figure}
 
 You can immediately see that some points are far apart yet clustered,
 while others are relatively close yet unclustered. There's also a sense
 that this particular hash function \(h_1\) was arbitrarily chosen to
 focus on the x-axis. What would have happened with the same data if we
-had used instead \(h_2(x) := \lfloor x_2 \rfloor?\) Here's that image:
+had used instead \(h_2(x) := \lfloor x_2 \rfloor?\) The result is
+figure~\ref{fig:fig2}.
 
-IMAGE
+\begin{figure}
+\centering
+\includegraphics{images/pdfs/lsh_image2.pdf}
+\caption{The same twenty points as figure 1, except that we're using the
+\(y\) values (instead of \(x\) values) to determine the hash-based
+cluster colors this time around.}\label{fig:fig2}
+\end{figure}
 
 While neither clustering alone is amazing, things start to work better
 if we use both of them simultaneously. That is, we can redefine our
@@ -230,9 +275,18 @@ clustering via
 
 \begin{equation} a \sim b \iff h_1(a) = h_1(b) \text{ and } h_2(a) = h_2(b). \label{eq:eq1}\end{equation}
 
-Our same example points look like this under the new clustering rule:
+Our same example points are shown under this new clustering in
+figure~\ref{fig:fig3}.
 
-IMAGE
+\begin{figure}
+\centering
+\includegraphics{images/pdfs/lsh_image3.pdf}
+\caption{The same twenty points clustered via two different hashes ---
+one using \(\lfloor x\rfloor\), the other using \(\lfloor y\rfloor.\) As
+before, points are colored based on which cluster they're in; a cluster
+is the set of all points who share both their \(\lfloor x\rfloor\) and
+their \(\lfloor y\rfloor\) values.}\label{fig:fig3}
+\end{figure}
 
 \subsection{Randomizing our hashes}\label{randomizing-our-hashes}
 
@@ -401,6 +455,8 @@ There's a lot more that can be said about LSH techniques. If there is
 reader interest, I may write a follow-up article explaining the details
 of min-wise hashing, which is a fun case that's simultaneously good at
 quickly finding nearby sets as well as nearby strings.
+
+CHECK ensure that the references section is not numbered
 
 \begin{center}\rule{0.5\linewidth}{\linethickness}\end{center}
 
