lsh1: Add first animation gif.

--- a/lsh_post1/lsh_post1.tex
+++ b/lsh_post1/lsh_post1.tex
@@ -425,6 +425,14 @@ matched --- and to what degree --- by a given point:
 
 IMAGE 8
 
+{[}CHECK text on turning this into a graph{]}
+
+\begin{figure}
+\centering
+\includegraphics{images/image8b@2x.gif}
+\caption{Description}
+\end{figure}
+
 \subsection{Why this is faster}\label{why-this-is-faster}
 
 So far we've been sticking to 2-dimensional data because that's easier
